--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "admin_dashboard": "file:..",
     "axios": "^1.8.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
